--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ logdir=file:///C:/project/logs/
 uploadimgdir=C:/project/uimg/
 #uploadimgdir=file:/root/uimg/ # 이건 리눅스
 
-adminserver = http://172.16.21.55:8088
-serviceserver = http://172.16.21.55
+adminserver = http://172.16.20.59:8088/
+serviceserver = http://172.16.20.59
 
 #adminserver = http://192.168.1.101:8088
 #serviceserver = http://192.168.1.101
