--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,15 @@ server.port=8088
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 # 아래 두줄 log 찍힘
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
-# user01은 오라클에 접속하는 사용자의 아이디일 뿐이다.
-spring.datasource.username=shop
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
+# 통합 DB 사용할 때는 아래 주소로
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@http://172.16.21.57:1521/xe
+
+
+#spring.datasource.username=shop
+#spring.datasource.password=111111
+# 통합 DB 사용할 때는 아래 정보로
+spring.datasource.username=AESPA
 spring.datasource.password=111111
 
 mybatis.type-aliases-package=com.kbstar.dto
