--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,13 +8,13 @@ server.port=8088
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 # 아래 두줄 log 찍힘
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:oracle:thin:@172.16.21.57:1521/xe
+#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@172.16.21.57:1521/xe
 # 통합 DB 사용할 때는 아래 주소로
 # 수정
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@172.16.21.57:1521/xe
+spring.datasource.url=jdbc:log4jdbc:oracle:thin:@172.16.21.57:1521/xe
 
 
-spring.datasource.username=Aespa
+spring.datasource.username=AESPA
 spring.datasource.password=111111
 # 통합 DB 사용할 때는 아래 정보로
 #spring.datasource.username=AESPA
@@ -34,8 +34,8 @@ logdir=file:///C:/project/logs/
 uploadimgdir=C:/project/uimg/
 #uploadimgdir=file:/root/uimg/ # 이건 리눅스
 
-adminserver = http://172.16.21.57:8088/
-serviceserver = http://172.16.21.57
+adminserver = http://172.16.20.61:8088/
+serviceserver = http://172.16.20.61
 
 #adminserver = http://192.168.1.101:8088
 #serviceserver = http://192.168.1.101
